--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 body {
     padding-top: 60px;
     padding-bottom: 40px;
+    background: silver;
 }
 .bar-sylizer{
 	color: white;
@@ -10,6 +11,8 @@ body {
 iframe{
 	border:30px solid black;
 	border-radius:10px;
+	width: 1024px;
+	height: 768px;
 }
 
 #pixel-slider {
